--- a/Source/UxThemeEx/UxThemeEx.vcxproj
+++ b/Source/UxThemeEx/UxThemeEx.vcxproj
@@ -54,19 +54,19 @@
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
-      <WarningLevel>Level3</WarningLevel>
+      <WarningLevel>Level4</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>BUILD_UXTHEMEEX;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <ModuleDefinitionFile>UxThemeEx.def</ModuleDefinitionFile>
-      <AdditionalDependencies>uxtheme.lib;shlwapi.lib;windowscodecs.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>ntdll.lib;uxtheme.lib;shlwapi.lib;windowscodecs.lib;comctl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
-      <WarningLevel>Level3</WarningLevel>
+      <WarningLevel>Level4</WarningLevel>
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -77,11 +77,12 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <ModuleDefinitionFile>UxThemeEx.def</ModuleDefinitionFile>
-      <AdditionalDependencies>uxtheme.lib;shlwapi.lib;windowscodecs.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>ntdll.lib;uxtheme.lib;shlwapi.lib;windowscodecs.lib;comctl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="BorderFill.cpp" />
+    <ClCompile Include="Debug.cpp" />
     <ClCompile Include="DllMain.cpp" />
     <ClCompile Include="DpiInfo.cpp" />
     <ClCompile Include="Global.cpp" />
@@ -104,10 +105,13 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BorderFill.h" />
+    <ClInclude Include="Debug.h" />
     <ClInclude Include="DpiInfo.h" />
     <ClInclude Include="DrawBase.h" />
     <ClInclude Include="gdiex.h" />
+    <ClInclude Include="GdiHandles.h" />
     <ClInclude Include="Global.h" />
+    <ClInclude Include="Handle.h" />
     <ClInclude Include="ImageFile.h" />
     <ClInclude Include="Primitives.h" />
     <ClInclude Include="RenderList.h" />
