--- a/Source/StyleCore/StyleCore.csproj
+++ b/Source/StyleCore/StyleCore.csproj
@@ -60,6 +60,8 @@
     <Compile Include="Native\SafeLocalMemHandle.cs" />
     <Compile Include="Native\SafeModuleHandle.cs" />
     <Compile Include="Native\SafeModuleHandleExtensions.cs" />
+    <Compile Include="Native\SafeThemeFileHandle.cs" />
+    <Compile Include="Native\UxThemeExNativeMethods.cs" />
     <Compile Include="Primitives.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Native\RECT.cs" />
