--- a/Source/ThemeBrowser/ThemeBrowser.csproj
+++ b/Source/ThemeBrowser/ThemeBrowser.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{ED93DFE6-C48D-41ED-991A-90505F8DDA19}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>StyleInspector</RootNamespace>
-    <AssemblyName>StyleInspector</AssemblyName>
+    <RootNamespace>ThemeBrowser</RootNamespace>
+    <AssemblyName>ThemeBrowser</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
