--- a/Source/UxThemeEx/UxThemeEx.vcxproj
+++ b/Source/UxThemeEx/UxThemeEx.vcxproj
@@ -58,6 +58,8 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>BUILD_UXTHEMEEX;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <MultiProcessorCompilation>true</MultiProcessorCompilation>
+      <MinimalRebuild>false</MinimalRebuild>
     </ClCompile>
     <Link>
       <ModuleDefinitionFile>UxThemeEx.def</ModuleDefinitionFile>
@@ -72,6 +74,7 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>BUILD_UXTHEMEEX;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
@@ -85,6 +88,7 @@
     <ClCompile Include="Debug.cpp" />
     <ClCompile Include="DllMain.cpp" />
     <ClCompile Include="DpiInfo.cpp" />
+    <ClCompile Include="DrawHelp.cpp" />
     <ClCompile Include="Global.cpp" />
     <ClCompile Include="Hooks.cpp" />
     <ClCompile Include="ImageFile.cpp" />
@@ -108,6 +112,7 @@
     <ClInclude Include="Debug.h" />
     <ClInclude Include="DpiInfo.h" />
     <ClInclude Include="DrawBase.h" />
+    <ClInclude Include="DrawHelp.h" />
     <ClInclude Include="gdiex.h" />
     <ClInclude Include="GdiHandles.h" />
     <ClInclude Include="Global.h" />
