--- a/Source/UxThemeEx/UxThemeEx.vcxproj
+++ b/Source/UxThemeEx/UxThemeEx.vcxproj
@@ -97,6 +97,7 @@
     <ClCompile Include="PublicApi.cpp" />
     <ClCompile Include="RenderList.cpp" />
     <ClCompile Include="RenderObj.cpp" />
+    <ClCompile Include="ScalingUtil.cpp" />
     <ClCompile Include="Sections.cpp" />
     <ClCompile Include="TextDraw.cpp" />
     <ClCompile Include="ThemeLoader.cpp" />
@@ -124,6 +125,7 @@
     <ClInclude Include="Primitives.h" />
     <ClInclude Include="RenderList.h" />
     <ClInclude Include="RenderObj.h" />
+    <ClInclude Include="ScalingUtil.h" />
     <ClInclude Include="Sections.h" />
     <ClInclude Include="TextDraw.h" />
     <ClInclude Include="ThemeLoader.h" />
@@ -134,6 +136,7 @@
     <ClInclude Include="UxThemeFile.h" />
     <ClInclude Include="UxThemeHelpers.h" />
     <ClInclude Include="VSUnpack.h" />
+    <ClInclude Include="WinInternal.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
