--- a/Source/ThemeBrowser/ThemeBrowser.csproj
+++ b/Source/ThemeBrowser/ThemeBrowser.csproj
@@ -57,6 +57,9 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>ThemeBrowser.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Drawing" />
@@ -78,12 +81,14 @@
     </ApplicationDefinition>
     <Compile Include="AsyncDelegateCommand.cs" />
     <Compile Include="BindingProxy.cs" />
+    <Compile Include="BitmapValue.cs" />
     <Compile Include="ColorToBrushConverter.cs" />
     <Compile Include="CombinedList.cs" />
     <Compile Include="DelegateCommand.cs" />
     <Compile Include="Extensions\ColorUtils.cs" />
     <Compile Include="Extensions\FrameworkExtensions.cs" />
     <Compile Include="Extensions\GeometryUtils.cs" />
+    <Compile Include="FrameworkElementAdorner.cs" />
     <Compile Include="HighContrastColor.cs" />
     <Compile Include="ImageColorPickerBehavior.cs" />
     <Compile Include="Extensions\ImagingUtils.cs" />
@@ -93,11 +98,17 @@
     <Compile Include="PreviewImageDialog.xaml.cs">
       <DependentUpon>PreviewImageDialog.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ProgressInfo.cs" />
+    <Compile Include="ProgressType.cs" />
+    <Compile Include="ShowProgressAdornerBehavior.cs" />
     <Compile Include="ThemeClassViewModel.cs" />
     <Compile Include="ThemeData.cs" />
+    <Compile Include="ThemeDataExtensions.cs" />
     <Compile Include="ThemeExtensions.cs" />
+    <Compile Include="ThemeFileComparisonViewModel.cs" />
     <Compile Include="ThemeFileViewModel.cs" />
     <Compile Include="ThemePartViewModel.cs" />
+    <Compile Include="ThemeRawProperty.cs" />
     <Compile Include="ThemeStateViewModel.cs" />
     <Compile Include="TraceImageDialog.xaml.cs">
       <DependentUpon>TraceImageDialog.xaml</DependentUpon>
@@ -132,25 +143,7 @@
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
-    <Compile Include="Properties\Settings.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Settings.settings</DependentUpon>
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
-    </Compile>
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
     <None Include="app.manifest" />
-    <None Include="Properties\Settings.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
-      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
-    </None>
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
@@ -166,7 +159,9 @@
       <Name>StyleCore</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="ThemeBrowser.ico" />
+  </ItemGroup>
   <Import Project="..\SharedPropertiesDotNet.props" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
