--- a/Source/ThemePreviewer/ThemePreviewer.csproj
+++ b/Source/ThemePreviewer/ThemePreviewer.csproj
@@ -364,6 +364,10 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\PresentationTheme.Aero\PresentationTheme.Aero.csproj">
+      <Project>{aef7f7b0-a3f0-482a-a0e0-4d8782cabaa6}</Project>
+      <Name>PresentationTheme.Aero</Name>
+    </ProjectReference>
     <ProjectReference Include="..\StyleCore\StyleCore.csproj">
       <Project>{839bcdaf-c880-4f9e-b3b6-388c2ae77156}</Project>
       <Name>StyleCore</Name>
