--- a/Source/PresentationTheme.Aero/PresentationTheme.Aero.csproj
+++ b/Source/PresentationTheme.Aero/PresentationTheme.Aero.csproj
@@ -34,12 +34,14 @@
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
+    <Reference Include="System.Xaml" />
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SystemVisualStateManager.cs" />
     <Compile Include="TextBoxService.cs" />
+    <Compile Include="ThemeHelper.cs" />
     <Compile Include="TreeViewService.cs" />
   </ItemGroup>
   <Import Project="..\SharedPropertiesDotNet.props" />
