--- a/Source/ThemePreviewer/ThemePreviewer.csproj
+++ b/Source/ThemePreviewer/ThemePreviewer.csproj
@@ -72,6 +72,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="AsyncDelegateCommand.cs" />
     <Compile Include="BuiltinThemes.cs" />
     <Compile Include="CacheTabsBehavior.cs" />
     <Compile Include="Controls\ProgressBarEx.cs">
@@ -80,10 +81,11 @@
     <Compile Include="Controls\TrackBarEx.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="ExpressionExtensions.cs" />
+    <Compile Include="Extensions.cs" />
     <Compile Include="FrameworkElementAdorner.cs" />
     <Compile Include="ItemGenerator.cs" />
     <Compile Include="MainWindowViewModel.cs" />
+    <Compile Include="NativeThemeInfo.cs" />
     <Compile Include="ProcessExtensions.cs" />
     <Compile Include="ProcessUtils.cs" />
     <Compile Include="ImagingUtils.cs" />
@@ -237,7 +239,8 @@
     </Compile>
     <Compile Include="Samples\TypeFactoryConverter.cs" />
     <Compile Include="ShowProgressAdornerBehavior.cs" />
-    <Compile Include="Theme.cs" />
+    <Compile Include="ThemeInfoProvider.cs" />
+    <Compile Include="WpfThemeInfo.cs" />
     <Compile Include="ThemeUtils.cs" />
     <Compile Include="UxThemeOverride.cs" />
     <Compile Include="ViewModel.cs" />
