--- a/Source/PresentationTheme.Aero/PresentationTheme.Aero.csproj
+++ b/Source/PresentationTheme.Aero/PresentationTheme.Aero.csproj
@@ -38,6 +38,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AeroTheme.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SystemVisualStateManager.cs" />
     <Compile Include="TextBoxService.cs" />
