--- a/Source/PresentationTheme.AeroLite.Win10/PresentationTheme.AeroLite.Win10.csproj
+++ b/Source/PresentationTheme.AeroLite.Win10/PresentationTheme.AeroLite.Win10.csproj
@@ -43,6 +43,7 @@
     <Compile Include="DoubleUtil.cs" />
     <Compile Include="EqualsConverter.cs" />
     <Compile Include="GroupBoxBorder.cs" />
+    <Compile Include="HeaderChrome.cs" />
     <Compile Include="LessThanOrEqualBinding.cs" />
     <Compile Include="ProgressBarChrome.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
