--- a/Source/PresentationTheme.Aero.Win10/PresentationTheme.Aero.Win10.csproj
+++ b/Source/PresentationTheme.Aero.Win10/PresentationTheme.Aero.Win10.csproj
@@ -39,6 +39,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AeroWin10Theme.cs" />
+    <Compile Include="AutoDropShadowPopup.cs" />
     <Compile Include="ButtonChrome.cs" />
     <Compile Include="DataGridLinesVisibilityConverter.cs" />
     <Compile Include="HeaderChrome.cs" />
