--- a/Source/PresentationTheme.Aero.Win7/PresentationTheme.Aero.Win7.csproj
+++ b/Source/PresentationTheme.Aero.Win7/PresentationTheme.Aero.Win7.csproj
@@ -46,7 +46,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Page Include="Themes\AeroWin7.NormalColor.xaml">
+    <Page Include="Themes\Aero.Win7.NormalColor.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
