--- a/Source/PresentationTheme.AeroLite.Win10/PresentationTheme.AeroLite.Win10.csproj
+++ b/Source/PresentationTheme.AeroLite.Win10/PresentationTheme.AeroLite.Win10.csproj
@@ -54,7 +54,7 @@
     <Compile Include="TypeOfConverter.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Page Include="Themes\AeroLiteWin10.NormalColor.xaml">
+    <Page Include="Themes\AeroLite.Win10.NormalColor.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
