--- a/Source/ThemeBrowser/ThemeBrowser.csproj
+++ b/Source/ThemeBrowser/ThemeBrowser.csproj
@@ -156,9 +156,9 @@
       <Project>{aef7f7b0-a3f0-482a-a0e0-4d8782cabaa6}</Project>
       <Name>PresentationTheme.Aero</Name>
     </ProjectReference>
-    <ProjectReference Include="..\StyleCore\StyleCore.csproj">
+    <ProjectReference Include="..\ThemeCore\ThemeCore.csproj">
       <Project>{839bcdaf-c880-4f9e-b3b6-388c2ae77156}</Project>
-      <Name>StyleCore</Name>
+      <Name>ThemeCore</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
