--- a/Source/ThemePreviewer/ThemePreviewer.csproj
+++ b/Source/ThemePreviewer/ThemePreviewer.csproj
@@ -466,9 +466,9 @@
       <Project>{55EF96DC-F991-42D9-B4D5-AE299AA380DC}</Project>
       <Name>PresentationTheme.HighContrast.Win10</Name>
     </ProjectReference>
-    <ProjectReference Include="..\StyleCore\StyleCore.csproj">
+    <ProjectReference Include="..\ThemeCore\ThemeCore.csproj">
       <Project>{839bcdaf-c880-4f9e-b3b6-388c2ae77156}</Project>
-      <Name>StyleCore</Name>
+      <Name>ThemeCore</Name>
     </ProjectReference>
     <ProjectReference Include="..\PresentationTheme.Aero.Win8\PresentationTheme.Aero.Win8.csproj">
       <Project>{d82a4175-763e-4591-8aa3-4bed74b57e32}</Project>
