--- a/Source/PresentationTheme.Aero.Win10/PresentationTheme.Aero.Win10.csproj
+++ b/Source/PresentationTheme.Aero.Win10/PresentationTheme.Aero.Win10.csproj
@@ -46,11 +46,12 @@
     <Compile Include="HeaderChrome.cs" />
     <Compile Include="DoubleUtil.cs" />
     <Compile Include="EqualsConverter.cs" />
+    <Compile Include="LayoutHelper.cs" />
     <Compile Include="ProgressBarChrome.cs" />
+    <Compile Include="RoundingTabPanel.cs" />
     <Compile Include="ScrollBarChrome.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SystemDropShadowChrome.cs" />
-    <Compile Include="TabPanelEx.cs" />
     <Compile Include="TextBoxChrome.cs" />
     <Compile Include="TickBarEx.cs" />
     <Compile Include="TypeOfConverter.cs" />
