--- a/Source/PresentationTheme.AeroLite.Win10/PresentationTheme.AeroLite.Win10.csproj
+++ b/Source/PresentationTheme.AeroLite.Win10/PresentationTheme.AeroLite.Win10.csproj
@@ -46,9 +46,11 @@
     <Compile Include="EqualsConverter.cs" />
     <Compile Include="GroupBoxBorder.cs" />
     <Compile Include="HeaderChrome.cs" />
+    <Compile Include="LayoutHelper.cs" />
     <Compile Include="LessThanOrEqualBinding.cs" />
     <Compile Include="ProgressBarChrome.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RoundingTabPanel.cs" />
     <Compile Include="SystemDropShadowChrome.cs" />
     <Compile Include="TextBoxChrome.cs" />
     <Compile Include="TickBarEx.cs" />
