--- a/Source/PresentationTheme.HighContrast.Win10/PresentationTheme.HighContrast.Win10.csproj
+++ b/Source/PresentationTheme.HighContrast.Win10/PresentationTheme.HighContrast.Win10.csproj
@@ -45,9 +45,11 @@
     <Compile Include="DoubleUtil.cs" />
     <Compile Include="EqualsConverter.cs" />
     <Compile Include="InvertThicknessConverter.cs" />
+    <Compile Include="LayoutHelper.cs" />
     <Compile Include="LessThanOrEqualBinding.cs" />
     <Compile Include="ProgressBarChrome.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RoundingTabPanel.cs" />
     <Compile Include="SystemDropShadowChrome.cs" />
     <Compile Include="TextBoxChrome.cs" />
     <Compile Include="SystemAliasResource.cs" />
