Aero: Fix menu scrolling
- Render menu scroll buttons like the Windows kernel
- Always show scroll buttons if the menu is overflowing, just disable them
  when reaching a scroll end
- Do not use pixel-based scrolling

--- a/Source/PresentationTheme.Aero.Win10/PresentationTheme.Aero.Win10.csproj
+++ b/Source/PresentationTheme.Aero.Win10/PresentationTheme.Aero.Win10.csproj
@@ -47,6 +47,7 @@
     <Compile Include="DoubleUtil.cs" />
     <Compile Include="EqualsConverter.cs" />
     <Compile Include="LayoutHelper.cs" />
+    <Compile Include="MenuScrollingEnabledConverter.cs" />
     <Compile Include="ProgressBarChrome.cs" />
     <Compile Include="RoundingTabPanel.cs" />
     <Compile Include="ScrollBarChrome.cs" />
