--- a/Source/PresentationTheme.AeroLite.Win10/PresentationTheme.AeroLite.Win10.csproj
+++ b/Source/PresentationTheme.AeroLite.Win10/PresentationTheme.AeroLite.Win10.csproj
@@ -48,6 +48,7 @@
     <Compile Include="HeaderChrome.cs" />
     <Compile Include="LayoutHelper.cs" />
     <Compile Include="LessThanOrEqualBinding.cs" />
+    <Compile Include="MenuScrollingEnabledConverter.cs" />
     <Compile Include="ProgressBarChrome.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RoundingTabPanel.cs" />
