--- a/Source/PresentationTheme.HighContrast.Win10/PresentationTheme.HighContrast.Win10.csproj
+++ b/Source/PresentationTheme.HighContrast.Win10/PresentationTheme.HighContrast.Win10.csproj
@@ -47,6 +47,7 @@
     <Compile Include="InvertThicknessConverter.cs" />
     <Compile Include="LayoutHelper.cs" />
     <Compile Include="LessThanOrEqualBinding.cs" />
+    <Compile Include="MenuScrollingEnabledConverter.cs" />
     <Compile Include="ProgressBarChrome.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RoundingTabPanel.cs" />
