--- a/Source/PresentationTheme.Aero/PresentationTheme.Aero.csproj
+++ b/Source/PresentationTheme.Aero/PresentationTheme.Aero.csproj
@@ -53,6 +53,11 @@
     <Compile Include="ThemeOptions.cs" />
     <Compile Include="TreeViewService.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Compile Include="..\PresentationTheme.Aero.VersionInfo.cs">
+      <Link>Properties\PresentationTheme.Aero.VersionInfo.cs</Link>
+    </Compile>
+  </ItemGroup>
   <Import Project="..\SharedPropertiesDotNet.props" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
