--- a/Source/PresentationTheme.AeroLite.Win10/PresentationTheme.AeroLite.Win10.csproj
+++ b/Source/PresentationTheme.AeroLite.Win10/PresentationTheme.AeroLite.Win10.csproj
@@ -70,6 +70,11 @@
     <Resource Include="Resources\Progress.PulseOverlay.png" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\PresentationTheme.Aero.VersionInfo.cs">
+      <Link>Properties\PresentationTheme.Aero.VersionInfo.cs</Link>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\PresentationTheme.Aero\PresentationTheme.Aero.csproj">
       <Project>{AEF7F7B0-A3F0-482A-A0E0-4D8782CABAA6}</Project>
       <Name>PresentationTheme.Aero</Name>
